Hopefully fixed the bg on mobile devices

--- a/style.css
+++ b/style.css
@@ -154,6 +154,9 @@ span.navmenu {
     width: 100vw;
     height: 300px;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-attachment: fixed;
     background-position: center top;
     letter-spacing: 10px;
